fixed naming issues and spacing issues

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -23,14 +23,14 @@ code {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #4fb7dd;
+  background-color: #4fb7dd80;
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a8bbbf;
+  background-color: #a8bbbf80;
 }
 
 .chakra-progress__indicator {
